# rust-web

./: Cargo.toml  database.sqlite  diesel.toml
migrations/2023-03-18-192302_create_users_table/: up.sql
migrations/2023-03-18-192509_create_messages_table/: up.sql
src/: main.rs  schema.rs
src/SQL/: db_connection.rs  mod.rs
src/SQL/users/: mod.rs  repository.rs  structs.rs
src/SQL/users/__test__/: fixtures.rs  mod.rs  test.rs
src/modules/http/: http_response.rs
src/router/: mod.rs  router.rs
src/router/routers/: user.rs
src/structs/: user.rs
