[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.5.1"
mime = "0.2.3"
router = "0.5.1"
urlencoded = "0.5.0"
bodyparser= "0.7.0"
rustc-serialize = "0.3"
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
diesel = { version = "2.0.0", features = ["sqlite"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
rand = "0.8.5"
